--- a/src/app/projects/project-topics/project-topics.component.html
+++ b/src/app/projects/project-topics/project-topics.component.html
@@ -17,9 +17,9 @@
   <tbody>
     <tr *ngFor="let topic of topics;index as id">
       <td>{{id+ 1}}</td>
-      <td>{{topic.topic}}</td>
+      <td>{{topic.title}}</td>
       <td>{{topic.supervisor}}</td>
-      <td>{{topic.date}}</td>
+      <td>{{topic.date | date}}</td>
     </tr>
   </tbody>
   <!-- <mat-list role="list">
