--- a/src/app/supervisor/student-list/student-list.component.html
+++ b/src/app/supervisor/student-list/student-list.component.html
@@ -13,7 +13,7 @@
           <h3>RegistrationNo</h3>
         </td>
         <td>
-          <h3>Phone Number</h3>
+          <h3>Email</h3>
         </td>
       </tr>
     </thead>
@@ -26,10 +26,10 @@
           {{student.FirstName}} {{student.LastName}} 
         </td>
         <td>
-        {{student.RegistrationNo}} 
+        {{student.username}} 
         </td>
         <td>
-          0{{student.Phone}}
+          {{student.email}}
         </td>
       </tr>
     </tbody>
