--- a/src/app/User/login/login.component.html
+++ b/src/app/User/login/login.component.html
@@ -2,25 +2,29 @@
   <div class="containerr">
     <div class="card mat-elevation-z20" style="margin-top: 30px;">
       <h1>Login</h1>
-      <h3 style="text-align: center; padding-left: 15px; color: rgb(104, 102, 100);"> Let's Get You In.</h3>
-      <hr color="#1976d2">
+      <h3 style="text-align: center;"> Let's Get You In.</h3>
+      <div class="container">
+        <div class="container">
+          <hr id="black">
+        </div>
+      </div>
       <form method="POST" class="mt-50" [formGroup]="loginForm" (ngSubmit)="login()">
         <mat-form-field appearance='legacy' class="full-width">
           <mat-label>Registration Number</mat-label>
-          <input matInput placeholder="CST/16/C0M/00543" formControlName='RegistrationNo'>
+          <input matInput placeholder="CST-16-C0M-00543" formControlName='username'>
           <mat-icon matSuffix>edit</mat-icon>
           <mat-error align='start' class="error">must be exactly 16 characters</mat-error>
-          <mat-hint align='end'>{{this.loginForm.get('RegistrationNo')?.value?.length || 0}}/16</mat-hint>
+          <mat-hint align='end'>{{this.loginForm.get('username')?.value?.length || 0}}/16</mat-hint>
         </mat-form-field>
         <mat-form-field appearance='legacy' class="full-width">
           <mat-label>Password</mat-label>
-          <input matInput placeholder="Shhh! Enter Something Super Secret" formControlName='Password'>
+          <input type='password' matInput placeholder="Shhh! Enter Something Super Secret" formControlName='password'>
           <mat-icon matSuffix>visibility</mat-icon>
-          <mat-error align='start' class="error" *ngIf="this.loginForm.get('Password')?.errors">must be at least 8 characters long</mat-error>
+          <mat-error align='start' class="error" *ngIf="this.loginForm.get('password')?.errors">must be at least 8 characters long</mat-error>
         </mat-form-field>
 
-        <button mat-button class="button" [disabled]="this.loginForm.invalid"><mat-spinner [diameter]='29' *ngIf="loading"></mat-spinner><span *ngIf='!loading'>Login</span></button>
-        <h4 style="text-align: center;">Don't have an account?  <a [routerLink]="['/user']">SignUp</a> here.</h4>
+        <button mat-button class="button"><mat-spinner [diameter]='29' *ngIf="loading"></mat-spinner><span *ngIf='!loading'>Login</span></button>
+        <h4 style="text-align: center;">Don't have an account?  <a [routerLink]="['/signup']">SignUp</a> here.</h4>
       </form>
     </div>
   </div>
