--- a/src/app/supervisor/supervisor.component.html
+++ b/src/app/supervisor/supervisor.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="container">
-    <div class="container">
+    <div class="container mb-30">
       <h1 style="font-weight: 700;text-align: center;">Dashboard</h1>
       <hr color="#1976d2">
     </div>
@@ -55,7 +55,7 @@
         </div>
         <br>
         <div>
-          <h2>Make Reviews</h2>
+          <h2>Take Actions</h2>
           <p>Review Project Proposal Topics and Chapters Sent By Your Assigned Students</p>
         </div>
       </div>
