--- a/src/app/supervisor/upload-project-topics/upload-project-topics.component.html
+++ b/src/app/supervisor/upload-project-topics/upload-project-topics.component.html
@@ -4,16 +4,19 @@
     <hr color="#1976d2">
   </div>
   <div class="mat-elevation-z20 card">
-    <form method="POST" [formGroup]='uploadTopicForm' >
+    <form method="POST" [formGroup]='uploadTopicForm' (ngSubmit)='logData()'>
       <mat-form-field [draggable]='true' appearance='outline' class="full-width">
         <mat-label>Project Title</mat-label>
-        <input matInput placeholder='Design and Implementation of GPS tracking System' formControlName='Title'>
+        <input matInput placeholder='Design and Implementation of GPS tracking System' formControlName='title'>
       </mat-form-field>
       <mat-form-field [draggable]='true' appearance='outline' class="full-width">
         <mat-label>Submitted By</mat-label>
-        <input matInput placeholder='Dr.Faruk Umar Ambursa' formControlName='SubmittedBy'>
+        <input matInput placeholder='Dr.Faruk Umar Ambursa' formControlName='supervisor'>
       </mat-form-field>
-      <button mat-button class="button" [disabled]='this.uploadTopicForm.invalid' (click)="logData()">Upload</button>
+      <button mat-button class="button" [disabled]='this.uploadTopicForm.invalid'>
+        <mat-spinner *ngIf='loading' [diameter]='29'></mat-spinner>
+        <span *ngIf='!loading'>Upload </span>
+      </button>
     </form>
   </div>
 </div>
